tests/characterization/snapshots/characterization__metadata_get__value_contains_separator.snap
---
source: tests/characterization/main.rs
expression: output
---
exit: 0
--- stdout ---
engine:
* branch:a=b (installed)
  v2.0.0
  v1.2.3
--- stderr ---
--- end ---
